--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		</style>
 	</head>
 
-    <body>
+    <body style="background-color: #e2e2e2;">
 		<script type="module" src="./src/main.js"></script>
 	</body>
-
 </html>
