--- a/index.html
+++ b/index.html
@@ -2,13 +2,25 @@
 <html lang="en">
     <head>
 		<meta charset="utf-8">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=menu" />
+		<link rel="stylesheet" href="src/css/index.css">
+		
 		<title>Rubik's Cube</title>
-		<style>
-			body { margin: 0; }
-		</style>
 	</head>
 
-    <body style="background-color: #e2e2e2;">
+    <body style="background-color: #f5f5f5;">
 		<script type="module" src="./src/main.js"></script>
+
+		<div id="user-interface">
+			<button class="btn">
+				<span class="material-symbols-outlined">menu</span>
+			</button>
+
+			<div class="roboto-mono setting-label">
+				<p>keybinds: </p>
+				<p>mode: </p>
+				<p>animation speed: </p>
+			</div>
+		</div>
 	</body>
 </html>
