add additional comments, remove corners member variable in RubiksCube class (no longer needed), remove mode setting for UI (no longer needed)

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 					<button class="btn settings-btn roboto-mono" id="keybinds-on">On</button>
 					<button class="btn settings-btn roboto-mono" id="keybinds-off">Off</button>
 				</div>
-				<div class="settings-row">
+				<!--<div class="settings-row">
 					<p>mode: </p>
 					<button class="btn settings-btn roboto-mono" id="button-mode">Button</button>
 					<button class="btn settings-btn roboto-mono" id="swipe-mode">Swipe</button>
 					<button class="btn settings-btn roboto-mono" id="mix-mode">Mix</button>
-				</div>
+				</div>-->
 				<div class="settings-row">
 					<p>keypress speed: </p>
 					<button class="btn settings-btn roboto-mono" id="keypress-fast">Fast</button>
