--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
     <head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0&icon_names=menu" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="src/css/index.css">
 		
 		<title>Rubik's Cube</title>
@@ -13,35 +16,36 @@
 
 		<div id="menu-icon">
 			<button class="btn">
-				<span class="material-symbols-outlined">menu</span>
+				<!--<span class="material-symbols-outlined">menu</span>-->
+				<img src="public/assets/images/menu_42dp_E3E3E3_FILL0_wght400_GRAD0_opsz40.svg">
 			</button>
 		</div>
 
 		<div id="user-interface">
 
-			<div class="roboto-mono settings">
+			<div class="roboto-mono-font settings">
 				<div class="settings-row">
 					<p>keybinds: </p>
-					<button class="btn settings-btn roboto-mono" id="keybinds-on">On</button>
-					<button class="btn settings-btn roboto-mono" id="keybinds-off">Off</button>
+					<button class="btn settings-btn roboto-mono-font" id="keybinds-on">On</button>
+					<button class="btn settings-btn roboto-mono-font" id="keybinds-off">Off</button>
 				</div>
 				<!--<div class="settings-row">
 					<p>mode: </p>
-					<button class="btn settings-btn roboto-mono" id="button-mode">Button</button>
-					<button class="btn settings-btn roboto-mono" id="swipe-mode">Swipe</button>
-					<button class="btn settings-btn roboto-mono" id="mix-mode">Mix</button>
+					<button class="btn settings-btn roboto-mono-font" id="button-mode">Button</button>
+					<button class="btn settings-btn roboto-mono-font" id="swipe-mode">Swipe</button>
+					<button class="btn settings-btn roboto-mono-font" id="mix-mode">Mix</button>
 				</div>-->
 				<div class="settings-row">
 					<p>keypress speed: </p>
-					<button class="btn settings-btn roboto-mono" id="keypress-fast">Fast</button>
-					<button class="btn settings-btn roboto-mono" id="keypress-slow">Slow</button>
+					<button class="btn settings-btn roboto-mono-font" id="keypress-fast">Fast</button>
+					<button class="btn settings-btn roboto-mono-font" id="keypress-slow">Slow</button>
 				</div>
 				<div class="settings-row">
 					<p>quick drag: </p>
-					<button class="btn settings-btn roboto-mono" id="quick-drag-on">On</button>
-					<button class="btn settings-btn roboto-mono" id="quick-drag-off">Off</button>
+					<button class="btn settings-btn roboto-mono-font" id="quick-drag-on">On</button>
+					<button class="btn settings-btn roboto-mono-font" id="quick-drag-off">Off</button>
 				</div>
-				<button class="btn roboto-mono" id="shuffle-btn">Shuffle</button>
+				<button class="btn roboto-mono-font" id="shuffle-btn">Shuffle</button>
 			</div>
 		</div>
 	</body>
