code cleanup (removal of excess comments and log statements, removal of currently-defunct quick drag controls, removal of excess spaces)

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 					<button class="btn settings-btn roboto-mono-font" id="keypress-fast">Fast</button>
 					<button class="btn settings-btn roboto-mono-font" id="keypress-slow">Slow</button>
 				</div>
-				<div class="settings-row">
+				<!--<div class="settings-row">
 					<p>quick drag: </p>
 					<button class="btn settings-btn roboto-mono-font" id="quick-drag-on">On</button>
 					<button class="btn settings-btn roboto-mono-font" id="quick-drag-off">Off</button>
-				</div>
+				</div>-->
 				<button class="btn roboto-mono-font" id="shuffle-btn">Shuffle</button>
 			</div>
 		</div>
