change font size for mobile message, add (nonfunctional) buttons for showing and hiding cube map

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 					<button class="btn settings-btn roboto-mono-font" id="quick-drag-on">On</button>
 					<button class="btn settings-btn roboto-mono-font" id="quick-drag-off">Off</button>
 				</div>-->
+				<div class="settings-row" id="cube-map-settings">
+					<p>show cube map: </p>
+					<button class="btn settings-btn roboto-mono-font" id="show-cubemap">On</button>
+					<button class="btn settings-btn roboto-mono-font" id="hide-cubemap">Off</button>
+				</div>
 				<button class="btn roboto-mono-font" id="shuffle-btn">Shuffle</button>
 			</div>
 		</div>
