implement reset button to return Rubiks Cube to its original, solved, state

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 					<button class="btn settings-btn roboto-mono-font" id="show-cubemap">On</button>
 					<button class="btn settings-btn roboto-mono-font" id="hide-cubemap">Off</button>
 				</div>
-				<button class="btn roboto-mono-font" id="shuffle-btn">Shuffle</button>
+				<button class="btn roboto-mono-font" id="shuffle-btn">shuffle</button>
+				<button class="btn roboto-mono-font" id="reset-btn">reset</button>
 			</div>
 		</div>
 	</body>
