--- a/index.html
+++ b/index.html
@@ -1,52 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
-		<link rel="stylesheet" href="src/css/index.css">
-		
-		<title>Rubik's Cube</title>
-	</head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu"
+        />
+        <link rel="stylesheet" href="src/css/index.css" />
 
-    <body style="background-color: #f5f5f5;">
-		<script type="module" src="./src/main.js"></script>
+        <title>Rubik's Cube</title>
+    </head>
 
-		<div id="menu-icon">
-			<button class="btn">
-				<span class="material-symbols-outlined">menu</span>
-			</button>
-		</div>
+    <body style="background-color: #f5f5f5">
+        <script type="module" src="./src/main.js"></script>
 
-		<div id="user-interface">
+        <div id="menu-icon">
+            <button class="btn">
+                <span class="material-symbols-outlined">menu</span>
+            </button>
+        </div>
 
-			<div class="roboto-mono-font settings">
-				<div class="settings-row">
-					<p>keybinds: </p>
-					<button class="btn settings-btn roboto-mono-font" id="keybinds-on">On</button>
-					<button class="btn settings-btn roboto-mono-font" id="keybinds-off">Off</button>
-				</div>
-				<div class="settings-row">
-					<p>keypress speed: </p>
-					<button class="btn settings-btn roboto-mono-font" id="keypress-fast">Fast</button>
-					<button class="btn settings-btn roboto-mono-font" id="keypress-slow">Slow</button>
-				</div>
-				<!--<div class="settings-row">
+        <div id="user-interface">
+            <div class="roboto-mono-font settings">
+                <div class="settings-row">
+                    <p>keybinds:</p>
+                    <button
+                        class="btn settings-btn roboto-mono-font"
+                        id="keybinds-on"
+                    >
+                        On
+                    </button>
+                    <button
+                        class="btn settings-btn roboto-mono-font"
+                        id="keybinds-off"
+                    >
+                        Off
+                    </button>
+                </div>
+                <div class="settings-row">
+                    <p>keypress speed:</p>
+                    <button
+                        class="btn settings-btn roboto-mono-font"
+                        id="keypress-fast"
+                    >
+                        Fast
+                    </button>
+                    <button
+                        class="btn settings-btn roboto-mono-font"
+                        id="keypress-slow"
+                    >
+                        Slow
+                    </button>
+                </div>
+                <!--<div class="settings-row">
 					<p>quick drag: </p>
 					<button class="btn settings-btn roboto-mono-font" id="quick-drag-on">On</button>
 					<button class="btn settings-btn roboto-mono-font" id="quick-drag-off">Off</button>
 				</div>-->
-				<div class="settings-row" id="cube-map-settings">
-					<p>show cube map: </p>
-					<button class="btn settings-btn roboto-mono-font" id="show-cubemap">On</button>
-					<button class="btn settings-btn roboto-mono-font" id="hide-cubemap">Off</button>
-				</div>
-				<button class="btn roboto-mono-font" id="shuffle-btn">shuffle</button>
-				<button class="btn roboto-mono-font" id="reset-btn">reset</button>
-			</div>
-		</div>
-	</body>
+                <div class="settings-row" id="cube-map-settings">
+                    <p>show cube map:</p>
+                    <button
+                        class="btn settings-btn roboto-mono-font"
+                        id="show-cubemap"
+                    >
+                        On
+                    </button>
+                    <button
+                        class="btn settings-btn roboto-mono-font"
+                        id="hide-cubemap"
+                    >
+                        Off
+                    </button>
+                </div>
+                <button class="btn roboto-mono-font" id="shuffle-btn">
+                    shuffle
+                </button>
+                <button class="btn roboto-mono-font" id="reset-btn">
+                    reset
+                </button>
+            </div>
+        </div>
+    </body>
 </html>
