add bar for cube dimension slider, stub out DimensionSlider class

--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
                         Slow
                     </button>
                 </div>
-                <!--<div class="settings-row">
-					<p>quick drag: </p>
-					<button class="btn settings-btn roboto-mono-font" id="quick-drag-on">On</button>
-					<button class="btn settings-btn roboto-mono-font" id="quick-drag-off">Off</button>
-				</div>-->
                 <div class="settings-row" id="cube-map-settings">
                     <p>show cube map:</p>
                     <button
@@ -78,6 +73,10 @@
                     >
                         Off
                     </button>
+                </div>
+                <div id="dimensions-settings">
+                    <p style="width: 100%; text-align: center; display: block">dimensions</p>
+                    <img id="slider-bar" src="./public/assets/images/slider_bar.svg">
                 </div>
                 <button class="btn roboto-mono-font" id="shuffle-btn">
                     shuffle
