add slider for cube dimensions (between 2x2, 3x3, 4x4, 5x5)z'

--- a/index.html
+++ b/index.html
@@ -76,14 +76,17 @@
                 </div>
                 <div id="dimensions-settings">
                     <p style="width: 100%; text-align: center; display: block">dimensions</p>
-                    <img id="slider-bar" src="./public/assets/images/slider_bar.svg">
+                    <img class="noselect" id="slider-bar" src="./public/assets/images/slider_bar.svg">
                 </div>
-                <button class="btn roboto-mono-font" id="shuffle-btn">
-                    shuffle
-                </button>
-                <button class="btn roboto-mono-font" id="reset-btn">
-                    reset
-                </button>
+                <div style="display: block">
+                    <button class="btn roboto-mono-font" id="shuffle-btn">
+                        shuffle
+                    </button>
+                    <button class="btn roboto-mono-font" id="reset-btn">
+                        reset
+                    </button>
+                </div>
+                
             </div>
         </div>
     </body>
