rewrite import path for slider bar SVG file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div id="dimensions-settings">
                     <p style="width: 100%; text-align: center; display: block">dimensions</p>
-                    <img class="noselect" id="slider-bar" src="./public/assets/images/slider_bar.svg">
+                    <img class="noselect" id="slider-bar" src="/assets/images/slider_bar.svg">
                 </div>
                 <div style="display: block">
                     <button class="btn roboto-mono-font" id="shuffle-btn">
